# PremierLeagueChat

./: .gitignore  .pre-commit-config.yaml  README.md  activate_env.fish  example_config.yaml  pyproject.toml  response.json
.github/: .gitmessage  pull_request_template.md
.github/workflows/: run_test.yaml
docs/: architecture_diagram_editable
src/: configuration.py  prototype.py
src/backend/: agent.py  squad.py
src/backend/premier_league_api/: base.py  exceptions.py  local.py  sportdb.py
src/backend/prompts/: clarify_team_name.py  formulate_answer.py  interpret_user_clarification.py
src/frontend/: app.py
src/utils/: logger.py
tests/: evaluate_all_teams.py  evaluation.py  evaluation_queries.py  evaluation_results.csv  example_user_queries.py  playground.py  test_results.csv  test_use_cases.py
tests/backend/: test_sportdb.py
tests/data/: squads.json
tests/one_time/: download_all_teams.py
