[project]
name = "premier-league-chat"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Krawiranda",email = "piotrkrawiranda@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "httpx-retries (>=0.4.0,<0.5.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pyright (>=1.1.402,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "src/**/*.py"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
